tests/parser/syntax-errors/token-not-found/expected_newline_after_simple_stmt.choc
# RUN: choco-opt "%s" | filecheck "%s" --strict-whitespace

def foo():
    if True:
        pass pass

# CHECK:      SyntaxError (line 5, column 14): token of kind TokenKind.NEWLINE not found.
# CHECK-NEXT: >>>        pass pass
# CHECK-NEXT: >>>-------------^
